Fixed notification top and bottom background for contrast

--- a/Root/CSS/Base/Base.css
+++ b/Root/CSS/Base/Base.css
@@ -155,7 +155,7 @@ button {
 	text-align: center;
 	position: absolute;
 	top: 118px;
-	background-color: #e9f5f97a;
+	background-color: #ebf2fe;
 	padding: 4px 8px;
 	border-radius: 18px;
 	color: #69B7CF;
@@ -175,7 +175,7 @@ button {
 	text-align: center;
 	position: absolute;
 	bottom: 232px;
-	background-color: #e9f5f97a;
+	background-color: #ebf2fe;
 	padding: 4px 8px;
 	border-radius: 18px;
 	color: #69B7CF;
